- Changed CHARACTERS_PER_LINE_IN_CHART_LEGEND_NUMBER cause now we limit how long data source and data point names are, so app behaves a bit different, now it should be good. - Tested on app and changed some parameters in CalculateConsolidatedChartHeightTest.java